--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,150 +13,513 @@
   src: url('../fonts/static/Inter-Regular.ttf') format('ttf')
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: auto 1fr auto; 
-    grid-template-areas:
-      "header header"
-      "sidebar main"
-      "footer footer";
-    grid-gap: 20px; 
-    margin: 50px 100px 50px 100px;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.contenu-grid {
+  padding: 20px 100px 50px 100px;
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.contenu:first-child {
+  grid-column: span 2;
+}
+
+.contenu:nth-child(4) {
+  grid-column: span 3;
+}
+
+.contenu:last-child {
+  background: #000;
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
+
+a {
+  text-decoration: none;
+  color: #4d4b4b;
+  font-family: "Inter-Regular", sans-serif;
+  margin: 10px;
+}
+
+a:hover {
+  color: #E2A84D;
+}
+
+.header {
+  padding: 50px 100px 0px 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  font-family: "Inter-ExtraBold";
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.span-menu {
+  padding: 5px;
+  text-align: end;
+  color: #4d4b4b;
+  font-size: 16px;
+  font-family: "Inter-Regular", sans-serif;
+}
+
+.img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+}
+
+.contenu-2{
+  font-size: 40px;
+  color: black;
+  font-family: "Inter-ExtraBold", sans-serif;
+  font-weight: 900;
+}
+
+.paragraphe-contenu-3{
+  font-size: 16px;
+  color: #4d4b4b;
+  font-family: "Inter-Regular", sans-serif;
+}
+
+.button {
+  background: black;
+  color: #fff;
+  margin-top: 38px;
+  border: none;
+  padding: 15px 30px 15px 30px;
+}
+
+.button:hover {
+  background: #F15D51;
+  color: #fff;
+  margin-top: 50px;
+  border: none;
+  padding: 15px 25px 15px 25px;
+}
+
+.titre {
+  color: #E2A84D;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 25px;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+
+.main-paragraphe {
+  margin: 0px 10px 20px 10px;
+  padding: 10px;
+  border-bottom: #4d4b4b solid 1px;
+}
+
+.paragraphe {
+  color: #fff;
+  font-size: 16px;
+  font-family: "Inter-Regular", sans-serif;
+  font-weight: bolder;
+  padding-bottom: 30px;
+}
+
+.paragraphe:hover {
+  color: #E2A84D;
+}
+
+.main-paragraphe:last-child {
+  border-bottom: none;
+}
+
+.span-paragraphe {
+  font-family: "Inter-Regular", sans-serif;
+  color: #a8a6a6;
+  font-size: 13px;
+  margin-top: 10px;
+}
+
+.contenu-grid-footer {
+  padding: 20px;
+  padding: 20px 100px 50px 100px;
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 20px;
+}
+
+.contenu-footer-1 {
+  display: flex;
+}
+
+.contenu-footer-2 {
+  display: flex;
+}
+
+.contenu-footer-3 {
+  display: flex;
+}
+
+.img-footer-1 {
+  width: 80px;
+  padding-right: 15px;
+  object-fit: cover;
+}
+
+.desc-footer-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.img-footer-2 {
+  width: 80px;
+  padding-right: 15px;
+  object-fit: cover;
+}
+
+.desc-footer-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.img-footer-3 {
+  width: 80px;
+  padding-right: 15px;
+  object-fit: cover;
+}
+
+.desc-footer-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.p-footer {
+  color: #000;
+  font-size: 16px; 
+  font-weight: 700;
+}
+
+.p-footer:hover {
+  color: #EA6157;
+}
+
+.p-margin-footer {
+  padding-bottom: 5px;
+}
+
+.p-1-footer {
+  font-size: 20px;
+  color: #ccc;
+  font-weight: bolder;
+}
+
+.p-3-footer {
+  font-size: 13px;
+  color: #4d4b4b;
+}
+
+.attribution{
+    border-top: 2px solid #ccc;
+    margin-bottom: 20px;
+    padding-top: 20px;
+}
+
+ @media (min-width: 200px) {
+  .img {
+    background-image: url('../images/image-web-3-mobile.jpg') !important;
+    background-size: cover;
+    object-fit: cover;
   }
-
-  a{
-    text-decoration: none;
-    color: #4d4b4b;
-    font-family: 'Inter-Regular' , sans-serif;
-    margin: 10px;
-
+  .menu {
+    display: none;
   }
-
-  a:hover{
-    color:rgb(226, 176, 12);
+  
+  .button {
+    background: #F15D51;
+    font-size: 10px;
   }
 
   .header {
-    grid-area: header;
-    display: flex;
-    justify-content: space-between;
+   padding: 20px 20px 0px 20px;
+  }
+
+  .logo {
+    font-size: 35px;
+    font-weight: 700;
+  }
+
+  .span-menu {
+    font-size: 13px;
+  }
+
+  .contenu-2{
+    font-size: 30px;
+  }
+
+  .paragraphe-contenu-3{
+    font-size: 14px;
+  }
+
+  .img {
+    height: 480px;
   }
   
-  .logo{
-    font-family: 'Inter-ExtraBold';
-    font-size: 40px;
-    font-weight: bolder;
+  .contenu-grid {
+    padding: 20px;
+    grid-template-columns: 1fr;
   }
 
-  .span-menu{
-    padding: 5px;
-    text-align: end;
-    color: #4d4b4b;
-    font-size: 16px;
-    font-family: 'Inter-Regular', sans-serif;
+  .contenu:first-child {
+    grid-column: unset;
   }
 
-  .sidebar {
-    grid-area: sidebar;
+  .contenu:nth-child(4) {
+    grid-column: unset;
   }
 
-  img {
-    width: 800px;
-    height: 400px;
- }
-
-  .sidebar-2 {
-    display: flex;
-
+  .contenu:last-child {
+    background: #000;
+    grid-column: unset;
+    grid-row: unset;
   }
 
-  .flex{
-  flex: 1; /* Distribution égale de l'espace disponible */
-  padding: 10px;
-  color: #fff;
-  margin-top: 20px;
+  .contenu-grid-footer {
+    padding: 20px;
+    grid-template-columns: 1fr;
   }
 
-  .flex-gauche{
-    font-size: 50px;
-    color:black;
-    font-family: 'Inter-ExtraBold', sans-serif;
-    font-weight: bolder;
+  .img-footer-1, .img-footer-2, .img-footer-3 {
+    width: 100px;
+  }
+}
+
+
+ @media (max-width: 200px) {
+  .button {
+    background: #F15D51;
+    font-size: 10px;
   }
 
-  .flex-droite{
-    font-size: 17px;
-    color:#4d4b4b;
-    font-family: 'Inter-Regular', sans-serif;
-  }
-  
-  .button{
-    background: black;
-    color: #fff;
-    margin-top: 50px;
-    border: none;
-    padding: 15px 25px 15px 25px;
-  }
-
-  .black{
-    color: #000;
-  }
-  .main {
-    grid-area: main;
-    background-color: #000;
-  }
-
-  .titre{
-    color:rgb(226, 176, 12);
-    font-family: 'Inter-Regular', sans-serif;
+  .logo {
     font-size: 25px;
-    font-weight: bold;
-  }
- 
-  .p-1{
-    margin-top: 20px;
   }
 
-  .titre-2{
-    color:rgb(226, 176, 12);
-    font-family: 'Inter-Regular', sans-serif;
-    font-size: 16px;
-    font-weight: bold;
+  .span-menu {
+    font-size: 13px;
   }
 
-  .main-paragraphe{
-    margin: 10px 10px 20px 10px;
-    padding: 10px;
+  .contenu-2{
+    font-size: 30px;
   }
 
-  .paragraphe{
-    color: #fff;
-    font-size: 16px;
-    font-family: 'Inter-Regular', sans-serif;
-    font-weight: bolder;
-    border-bottom: #4d4b4b solid 1px;
-    padding-bottom: 30px;
+  .paragraphe-contenu-3{
+    font-size: 14px;
+  }
+
+  .img {
+    height: 480px;
   }
   
-  .span-paragraphe{
-    font-family: 'Inter-Regular', sans-serif;
-    color: #4d4b4b;
-    font-size: 12px;
-    margin-top: 10px;
-    
+  .contenu-grid {
+    padding: 20px;
+    grid-template-columns: 1fr;
   }
 
-  .footer {
-    grid-area: footer;
+  .contenu:first-child {
+    grid-column: unset;
   }
 
+  .contenu:nth-child(4) {
+    grid-column: unset;
+  }
+
+  .contenu:last-child {
+    background: #000;
+    grid-column: unset;
+    grid-row: unset;
+  }
+
+  .contenu-grid-footer {
+    padding: 20px;
+    grid-template-columns: 1fr;
+  }
+
+  .img-footer-1, .img-footer-2, .img-footer-3 {
+    width: 100px;
+  }
+}
+
+@media (min-width: 600px) {
+  .button {
+    background: #F15D51;
+    font-size: 8px;
+  }
+
+  .logo {
+    font-size: 25px;
+  }
+
+  .span-menu {
+    font-size: 13px;
+  }
+
+  .contenu-2{
+    font-size: 30px;
+  }
+
+  .paragraphe-contenu-3{
+    font-size: 14px;
+  }
+
+  .img {
+    height: 480px;
+  }
+
+  .contenu-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .contenu-grid-footer {
+    padding: 20px;
+    grid-template-columns: 1fr;
+  }
+
+  .img-footer-1, .img-footer-2, .img-footer-3 {
+    width: 100px;
+  }
+
+}
+
+@media (min-width: 768px) {
+  .button {
+    background: #F15D51;
+    margin-top: 70px;
+    font-size: 14px;
+  }
+
+  .logo {
+    font-size: 40px;
+  }
+
+  .span-menu {
+    font-size: 16px;
+  }
+
+  .contenu-2{
+    font-size: 40px;
+  }
+
+  .paragraphe-contenu-3{
+    font-size: 15px;
+  }
+
+  .img {
+    height: 380px;
+  }
+
+  .contenu-grid {
+    padding: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .contenu-grid-footer {
+    padding: 20px;
+    grid-template-columns: 1fr;
+  }
+
+  .img-footer-1, .img-footer-2, .img-footer-3 {
+    width: 100px;
+  }
+}
+
+@media (min-width: 992px) {
+  .button {
+
+    margin-top: 50px;
+    font-size: 16px;
+  }
+
+  .logo {
+    font-size: 40px;
+  }
+
+  .span-menu {
+    font-size: 16px;
+  }
+
+  .contenu-2{
+    font-size: 40px;
+  }
+
+  .paragraphe-contenu-3{
+    font-size: 15px;
+  }
+
+  .contenu-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .contenu-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
   
-  .image{
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
+  .contenu:first-child {
+    grid-column: span 2;
+  }
+  
+  .contenu:nth-child(4) {
+    grid-column: span 3;
+  }
+  
+  .contenu:last-child {
+    grid-column: 3;
+    grid-row: 1 / 3;
+  }
+  
+  .contenu-grid-footer {
+    padding: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
-  .attribution{
-    margin: 10px;
+  .img-footer-1, .img-footer-2, .img-footer-3 {
+    width: 80px;
   }
+}
+
+@media (min-width: 1200px) {
+  .contenu-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .contenu:first-child {
+    grid-column: span 2;
+  }
+  
+  .contenu:nth-child(4) {
+    grid-column: span 3;
+  }
+  
+  .contenu:last-child {
+    grid-column: 3;
+    grid-row: 1 / 3;
+  } 
+  
+  .contenu-grid-footer {
+    padding: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .img-footer-1, .img-footer-2, .img-footer-3 {
+    width: 80px;
+  }
+} 
