--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,6 +241,7 @@ a:hover {
     background-size: cover;
     object-fit: cover;
   }
+
   .menu {
     display: none;
   }
@@ -306,6 +307,25 @@ a:hover {
 
 
  @media (max-width: 200px) {
+  .header {
+    padding: 20px 20px 0px 20px;
+   }
+ 
+   .logo {
+     font-size: 35px;
+     font-weight: 700;
+   }
+
+   .img {
+    background-image: url('../images/image-web-3-mobile.jpg') !important;
+    background-size: cover;
+    object-fit: cover;
+  }
+  
+  .menu {
+    display: none;
+  }
+ 
   .button {
     background: #F15D51;
     font-size: 10px;
@@ -361,6 +381,25 @@ a:hover {
 }
 
 @media (min-width: 600px) {
+  .header {
+    padding: 20px 20px 0px 20px;
+   }
+ 
+   .logo {
+     font-size: 35px;
+     font-weight: 700;
+   }
+
+   .img {
+    background-image: url('../images/image-web-3-mobile.jpg') !important;
+    background-size: cover;
+    object-fit: cover;
+  }
+  
+  .menu {
+    display: inline;
+  }
+
   .button {
     background: #F15D51;
     font-size: 8px;
@@ -402,8 +441,27 @@ a:hover {
 }
 
 @media (min-width: 768px) {
+  .header {
+    padding: 20px 20px 0px 20px;
+   }
+ 
+   .logo {
+     font-size: 35px;
+     font-weight: 700;
+   }
+
+   .img {
+    background-image: url('../images/image-web-3-mobile.jpg') !important;
+    background-size: cover;
+    object-fit: cover;
+  }
+  
+  .menu {
+    display: inline;
+  }
+
   .button {
-    background: #F15D51;
+    background: #000;
     margin-top: 70px;
     font-size: 14px;
   }
@@ -444,6 +502,26 @@ a:hover {
 }
 
 @media (min-width: 992px) {
+
+  .header {
+    padding: 20px 20px 0px 20px;
+   }
+ 
+   .logo {
+     font-size: 35px;
+     font-weight: 700;
+   }
+
+   .img {
+    background-image: url('../images/image-web-3-mobile.jpg') !important;
+    background-size: cover;
+    object-fit: cover;
+  }
+  
+  .menu {
+    display: inline;
+  }
+
   .button {
 
     margin-top: 50px;
